--- a/app/index.html
+++ b/app/index.html
@@ -6,18 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>eCommerce</title>
   <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 
 </head>
 <body ng-app="ecommWebApp">
-
+  <ui-view></ui-view>
 
 <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
+<!-- app.js -->
 <script type="text/javascript" src="js/app.js"></script>
+<!-- Controllers -->
+<script type="text/javascript" src="js/controllers/loginController.js"></script>
 <script type="text/javascript" src="js/controllers/mainController.js"></script>
+
+<!-- Directives -->
 <script type="text/javascript" src="js/directives/nameDirective.js"></script>
 
 </body>
