* Adding Login component

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,7 @@
 
 </head>
 <body ng-app="ecommWebApp">
-  <ui-view></ui-view>
-
+	<ui-view></ui-view>
 <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -25,6 +24,9 @@
 
 <!-- Directives -->
 <script type="text/javascript" src="js/directives/nameDirective.js"></script>
+
+<!-- Components -->
+<script type="text/javascript" src="js/components/loginComponent.js"></script>
 
 </body>
 </html>
