* Adding service * dashboard

--- a/app/index.html
+++ b/app/index.html
@@ -15,12 +15,18 @@
 <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/libs/pouch-db-6.2.0.js">
 
+</script>
 <!-- app.js -->
 <script type="text/javascript" src="js/app.js"></script>
 <!-- Controllers -->
 <script type="text/javascript" src="js/controllers/loginController.js"></script>
 <script type="text/javascript" src="js/controllers/mainController.js"></script>
+<script type="text/javascript" src="js/controllers/dashboardController.js"></script>
+
+<!-- Services -->
+<script type="text/javascript" src="js/services/userService.js"></script>
 
 <!-- Directives -->
 <script type="text/javascript" src="js/directives/nameDirective.js"></script>
