--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,10 @@
 <!-- Services -->
 <script type="text/javascript" src="js/services/userService.js"></script>
 
+<!-- Factories -->
+<script type="text/javascript" src="js/factories/userFactory.js"></script>
+
+
 <!-- Directives -->
 <script type="text/javascript" src="js/directives/nameDirective.js"></script>
 
